--- a/GameOne/styles.css
+++ b/GameOne/styles.css
@@ -1,21 +1,3 @@
-body {
-    width: 100vw;
-    height: 100vh;
-    margin: 0;
-    padding: 0;
-    background-color: #222;
-    position: relative;
-}
-
-.starship {
-    position: absolute;
-    width: 100%;
-    left: 0;
-    top: 200px;
-    background-color: orange;
-    animation: marquee 4s linear infinite;
-}
-
 @keyframes marquee {
     from {
         transform: translateX(100%);
@@ -23,4 +5,27 @@ body {
     to {
         transform: translateX(-100%);
     }
+}
+
+body {
+    width: 100vw;
+    height: 100vh;
+    margin: 0;
+    padding: 0;
+    position: relative;
+    overflow: hidden;
+}
+
+.starship {
+    position: absolute;
+    left: 0;
+    height: 40%;
+    width: 100%;
+    top: 200px;
+    animation: marquee 4s linear infinite;
+    font-size: 40px;
+}
+
+img {
+    width: 70px;
 }
