--- a/GameOne/styles.css
+++ b/GameOne/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Geostar+Fill&display=swap');
+
 @keyframes marquee {
     from {
         transform: translateX(100%);
@@ -16,6 +18,8 @@ body {
     overflow: hidden;
     background-image: url(../Images/star-background.jpg);
     background-size: cover;
+    font-family: 'Geostar Fill', monospace;
+    font-size: calc(10px + 0.5vw);
 }
 
 .starship {
@@ -30,4 +34,64 @@ body {
 
 img {
     width: 70px;
+}
+
+.overlay {
+    background-color: rgba(255, 255, 255, 0.4);
+    position: fixed;
+    pointer-events: none;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    z-index: 10;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.startform {
+    width: clamp(270px, 27vw, 450px);
+    height: clamp(370px, 37vw, 600px);
+    background-color: #ffc909;
+    border-radius: 4vw;
+}
+
+form {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+form>h2 {
+    text-align: center;
+    margin: 0;
+    margin-top: 0.5vw;
+}
+
+form>p {
+    margin: 0 1vw;
+    text-align: justify;
+}
+
+.select-container>div {
+    display: flex;
+    justify-content: space-between;
+    margin: 1vw;
+}
+
+input {
+    width: 20px;
+}
+
+form>button {
+    width: clamp(40px, 6vw, 200px);
+    height: clamp(40px, 3vw, 50px);
+    border-radius: 10px;
+    font-family: 'Geostar Fill', monospace;
+    font-size: calc(10px + 0.5vw);
 }
