Add x-wing to the options

--- a/GameOne/styles.css
+++ b/GameOne/styles.css
@@ -65,6 +65,7 @@ form {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    pointer-events: all;
 }
 
 form>h2 {
