--- a/GameOne/styles.css
+++ b/GameOne/styles.css
@@ -152,3 +152,14 @@ h3 {
 .visible {
     visibility: hidden;
 }
+
+a>.fa-house {
+    position: fixed;
+    top: 20px;
+    left: 20px;
+    color: white;
+    font-size: 2.5rem;
+    border: 3px solid white;
+    border-radius: 10px;
+    padding: 1rem;
+}
