--- a/GameOne/styles.css
+++ b/GameOne/styles.css
@@ -190,3 +190,40 @@ a>.fa-house {
     border-radius: 10px;
     padding: 1rem;
 }
+
+/* Styles für finish.html */
+
+body.finish {
+    background-image: url("../Images/fireworks.webp");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    position: relative;
+}
+
+.message {
+    position: fixed;
+    top: 50vh;
+    left: 50vw;
+    margin-top: -20vh;
+    margin-left: -30vw;
+    width: 60vw;
+    height: 40vh;
+    border-radius: 2rem;
+    box-shadow: 0 0 15px white;
+    background-color: rgba(255, 255, 255, 0.6);
+}
+
+.message>p, 
+.message>h2 {
+    margin: 3rem;
+    text-align: center;
+}
+
+.message>h2 {
+    font-size: 3rem;
+}
+
+.message>p {
+    font-size: 1.5rem;
+}
